RESOLVED FIXED108241
Fix erroneous semicolon causing build failure: if statement has empty body [-Werror,-Wempty-body]
https://bugs.webkit.org/show_bug.cgi?id=108241
Summary Fix erroneous semicolon causing build failure: if statement has empty body [-...
Kiran Muppala
Reported 2013-01-29 15:50:25 PST
The patch for https://bugs.webkit.org/show_bug.cgi?id=108054, fails to build on a debug Mountain Lion bot with the following error: Source/WebKit2/UIProcess/WebProcessProxy.cpp:190:44: error: if statement has empty body [-Werror,-Wempty-body] This was caused by a semicolon erroneously following a if condition.
Attachments
Patch (1.48 KB, patch)
2013-01-29 15:53 PST, Kiran Muppala
no flags
Kiran Muppala
Comment 1 2013-01-29 15:53:14 PST
Kiran Muppala
Comment 2 2013-01-29 15:54:07 PST
WebKit Review Bot
Comment 3 2013-01-29 16:45:27 PST
Comment on attachment 185325 [details] Patch Clearing flags on attachment: 185325 Committed r141180: <http://trac.webkit.org/changeset/141180>
WebKit Review Bot
Comment 4 2013-01-29 16:45:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.